--- a/ui-lab/logo-drop.html
+++ b/ui-lab/logo-drop.html
@@ -6,22 +6,19 @@
 <title>FreeFlow • Drop logo (with splash)</title>
 <style>
   :root{
-    --w: 170px;            /* szerokość kropli/logo */
-    --fall: 1100ms;        /* czas spadania */
-    --squash: 180ms;       /* “ugięcie” przy lądowaniu */
-    --splash: 680ms;       /* rozprysk kropelek */
-    --ripple: 900ms;       /* fale */
-    --delay-splash: 1050ms;/* odpalenie splash po starcie spadania */
+    --w: 170px;
+    --fall: 1100ms;
+    --squash: 180ms;
+    --splash: 680ms;
+    --ripple: 900ms;
+    --delay-splash: 1050ms;
   }
-
   html,body{height:100%}
   body{
     margin:0; overflow:hidden;
-    background:#0e1116 url('assets/background.jpg') center/cover no-repeat fixed;
+    background:#0e1116 url('./assets/background.jpg') center/cover no-repeat fixed;
     display:flex; align-items:flex-start; justify-content:center;
   }
-
-  /* scenografia */
   .stage{
     width:100%; height:100%;
     position:relative;
@@ -33,12 +30,10 @@
     background: radial-gradient(ellipse at center, rgba(0,0,0,.35), rgba(0,0,0,0) 70%);
     filter: blur(10px); opacity:.75; pointer-events:none;
   }
-
-  /* logo-kropla */
   .logo{
-    position:absolute; top:-260px; /* start nad ekranem */
+    position:absolute; top:-260px;
     width:var(--w); aspect-ratio:1/1.35;
-    background:url('assets/mic_drop.png') center/contain no-repeat;
+    background:url('./assets/mic_drop.png') center/contain no-repeat;
     filter: drop-shadow(0 10px 28px rgba(0,0,0,.45));
     transform-origin: 50% 90%;
     animation:
@@ -46,8 +41,6 @@
       squash var(--squash) cubic-bezier(.2,.9,.3,1) calc(var(--fall)) 1 both,
       rebound 520ms cubic-bezier(.2,.8,.25,1) calc(var(--fall) + var(--squash)) 1 both;
   }
-
-  /* ripples (fale) pojawiają się na “podstawce” */
   .ripples{
     position:absolute; bottom:18.5%; left:50%;
     transform:translateX(-50%);
@@ -63,7 +56,6 @@
   .ripples span:nth-child(2){ animation-delay: calc(var(--delay-splash) + 120ms); }
   .ripples span:nth-child(3){ animation-delay: calc(var(--delay-splash) + 240ms); }
 
-  /* kropelki */
   .splash{
     position:absolute; bottom:20%; left:50%;
     width:0; height:0; pointer-events:none;
@@ -75,9 +67,6 @@
     opacity:0;
     animation: splash var(--splash) cubic-bezier(.1,.7,.1,1) var(--delay-splash) forwards;
   }
-
-  /* pozycje i kierunki kropelek */
-  /* 12 “strzałów” po okręgu z drobną losowością */
   .splash i:nth-child(1){ --dx:  0.0;  --dy:-1.0; }
   .splash i:nth-child(2){ --dx:  0.5;  --dy:-0.9; }
   .splash i:nth-child(3){ --dx:  0.9;  --dy:-0.5; }
@@ -90,10 +79,9 @@
   .splash i:nth-child(10){--dx: -1.0;  --dy: 0.0; }
   .splash i:nth-child(11){--dx: -0.9;  --dy:-0.5; }
   .splash i:nth-child(12){--dx: -0.5;  --dy:-0.9; }
-  .splash i{ --dist: 120px; }         /* zasięg rozprysku */
-  .splash i:nth-child(odd){ --dist: 150px; } /* niektóre dalej */
+  .splash i{ --dist: 120px; }
+  .splash i:nth-child(odd){ --dist: 150px; }
 
-  /* animacje */
   @keyframes drop{
     0%   { transform: translateY(-60vh) scale(1) rotate(0deg); }
     85%  { transform: translateY(62vh)  scale(1) rotate(0.5deg); }
@@ -122,8 +110,6 @@
       filter: blur(1px);
     }
   }
-
-  /* przycisk replay */
   .replay{
     position:fixed; inset:auto 12px 12px auto;
     border:1px solid rgba(255,255,255,.12);
@@ -132,8 +118,6 @@
     padding:10px 14px; border-radius:12px; cursor:pointer;
     backdrop-filter: blur(6px);
   }
-
-  /* mobile tune */
   @media (max-width:520px){
     :root{ --w: 150px; }
   }
@@ -143,16 +127,10 @@
 
 <div class="stage" id="stage">
   <div class="table-shadow"></div>
-
-  <!-- kropla z mikrofonem -->
   <div class="logo" id="logo" aria-hidden="true"></div>
-
-  <!-- fale -->
   <div class="ripples" aria-hidden="true">
     <span></span><span></span><span></span>
   </div>
-
-  <!-- kropelki -->
   <div class="splash" id="splash" aria-hidden="true">
     <i></i><i></i><i></i><i></i><i></i><i></i>
     <i></i><i></i><i></i><i></i><i></i><i></i>
@@ -162,40 +140,26 @@
 <button class="replay" id="replay">▶︎ Odtwórz ponownie</button>
 
 <script>
-  // Prosty mechanizm powtórki: usuwamy i dodajemy elementy z klasami/animacjami
   const stage   = document.getElementById('stage');
   const logo    = document.getElementById('logo');
   const replay  = document.getElementById('replay');
 
   function restartAnimation(){
-    // snapshot pozycji (opcjonalnie można dodać klasę)
     logo.style.animation = 'none';
-    // wymuszenie reflow
     void logo.offsetWidth;
-
-    // przywrócenie sekwencji
     logo.style.animation =
       `drop var(--fall) cubic-bezier(.22,.9,.27,1) 0ms 1 forwards,
        squash var(--squash) cubic-bezier(.2,.9,.3,1) calc(var(--fall)) 1 both,
        rebound 520ms cubic-bezier(.2,.8,.25,1) calc(var(--fall) + var(--squash)) 1 both`;
 
-    // Podmieniamy “ripples” i “splash”, żeby ich animacje odpaliły od zera
     const rip = stage.querySelector('.ripples');
     const spl = stage.querySelector('.splash');
-    const ripClone = rip.cloneNode(true);
-    const splClone = spl.cloneNode(true);
-    rip.replaceWith(ripClone);
-    spl.replaceWith(splClone);
+    rip.replaceWith(rip.cloneNode(true));
+    spl.replaceWith(spl.cloneNode(true));
   }
 
   replay.addEventListener('click', restartAnimation);
-
-  // Jeszcze raz uruchom po załadowaniu obrazków (gdy CDN/gh-pages cacheuje)
-  window.addEventListener('load', () => {
-    // jeśli tło/kropla już są zcache’owane, to wystarczy lekki delay,
-    // by animacje zaczęły spójnie
-    setTimeout(restartAnimation, 60);
-  });
+  window.addEventListener('load', () => setTimeout(restartAnimation, 60));
 </script>
 
 </body>
