--- a/ui-lab/logo-drop.html
+++ b/ui-lab/logo-drop.html
@@ -13,12 +13,14 @@
     --ripple: 900ms;
     --delay-splash: 1050ms;
   }
+
   html,body{height:100%}
   body{
     margin:0; overflow:hidden;
-    background:#0e1116 url('./assets/background.jpg') center/cover no-repeat fixed;
+    background:#0e1116 url('/Freeflo/ui-lab/assets/background.jpg') center/cover no-repeat fixed;
     display:flex; align-items:flex-start; justify-content:center;
   }
+
   .stage{
     width:100%; height:100%;
     position:relative;
@@ -30,10 +32,11 @@
     background: radial-gradient(ellipse at center, rgba(0,0,0,.35), rgba(0,0,0,0) 70%);
     filter: blur(10px); opacity:.75; pointer-events:none;
   }
+
   .logo{
     position:absolute; top:-260px;
     width:var(--w); aspect-ratio:1/1.35;
-    background:url('./assets/mic_drop.png') center/contain no-repeat;
+    background:url('/Freeflo/ui-lab/assets/mic_drop.png') center/contain no-repeat;
     filter: drop-shadow(0 10px 28px rgba(0,0,0,.45));
     transform-origin: 50% 90%;
     animation:
@@ -41,6 +44,7 @@
       squash var(--squash) cubic-bezier(.2,.9,.3,1) calc(var(--fall)) 1 both,
       rebound 520ms cubic-bezier(.2,.8,.25,1) calc(var(--fall) + var(--squash)) 1 both;
   }
+
   .ripples{
     position:absolute; bottom:18.5%; left:50%;
     transform:translateX(-50%);
@@ -67,6 +71,7 @@
     opacity:0;
     animation: splash var(--splash) cubic-bezier(.1,.7,.1,1) var(--delay-splash) forwards;
   }
+
   .splash i:nth-child(1){ --dx:  0.0;  --dy:-1.0; }
   .splash i:nth-child(2){ --dx:  0.5;  --dy:-0.9; }
   .splash i:nth-child(3){ --dx:  0.9;  --dy:-0.5; }
@@ -110,6 +115,7 @@
       filter: blur(1px);
     }
   }
+
   .replay{
     position:fixed; inset:auto 12px 12px auto;
     border:1px solid rgba(255,255,255,.12);
@@ -118,6 +124,7 @@
     padding:10px 14px; border-radius:12px; cursor:pointer;
     backdrop-filter: blur(6px);
   }
+
   @media (max-width:520px){
     :root{ --w: 150px; }
   }
@@ -159,7 +166,10 @@
   }
 
   replay.addEventListener('click', restartAnimation);
-  window.addEventListener('load', () => setTimeout(restartAnimation, 60));
+
+  window.addEventListener('load', () => {
+    setTimeout(restartAnimation, 60);
+  });
 </script>
 
 </body>
