--- a/ui-lab/logo-drop.html
+++ b/ui-lab/logo-drop.html
@@ -3,90 +3,95 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>FreeFlow • Drop logo (with splash)</title>
+<title>FreeFlow • Drop logo (splash + ripples)</title>
 <style>
   :root{
-    --w: 170px;
-    --fall: 1100ms;
-    --squash: 180ms;
-    --splash: 680ms;
-    --ripple: 900ms;
-    --delay-splash: 1050ms;
+    --logo-w: 172px;          /* szerokość kropli */
+    --fall: 1100ms;           /* czas spadania */
+    --squash: 180ms;          /* “ugięcie” przy lądowaniu */
+    --rebound: 520ms;         /* odbicie */
+    --ripples: 900ms;         /* czas fali */
+    --splash: 700ms;          /* czas kropel */
+    --delay-hit: 1050ms;      /* moment kontaktu z “podstawką” */
   }
 
   html,body{height:100%}
   body{
     margin:0; overflow:hidden;
-    background:#0e1116 url('/Freeflo/ui-lab/assets/background.jpg') center/cover no-repeat fixed;
+    background:#0e1116 url('assets/background.jpg') center/cover no-repeat fixed;
     display:flex; align-items:flex-start; justify-content:center;
   }
 
+  /* scena */
   .stage{
     width:100%; height:100%;
     position:relative;
     display:flex; align-items:flex-start; justify-content:center;
   }
+  /* delikatny cień stołu/podstawy */
   .table-shadow{
     position:absolute; bottom:10%; left:50%; transform:translateX(-50%);
-    width:min(78vw,680px); height:20px;
-    background: radial-gradient(ellipse at center, rgba(0,0,0,.35), rgba(0,0,0,0) 70%);
-    filter: blur(10px); opacity:.75; pointer-events:none;
+    width:min(78vw,680px); height:22px;
+    background: radial-gradient(ellipse at center, rgba(0,0,0,.38), rgba(0,0,0,0) 70%);
+    filter: blur(12px); opacity:.75; pointer-events:none;
   }
 
+  /* logo – mikrofon w kropli */
   .logo{
-    position:absolute; top:-260px;
-    width:var(--w); aspect-ratio:1/1.35;
-    background:url('/Freeflo/ui-lab/assets/mic_drop.png') center/contain no-repeat;
-    filter: drop-shadow(0 10px 28px rgba(0,0,0,.45));
+    position:absolute; top:-260px; /* start nad ekranem */
+    width:var(--logo-w); aspect-ratio:1/1.35;
+    background:url('assets/mic_drop.png') center/contain no-repeat;
+    filter: drop-shadow(0 12px 28px rgba(0,0,0,.45));
     transform-origin: 50% 90%;
     animation:
       drop var(--fall) cubic-bezier(.22,.9,.27,1) 0ms 1 forwards,
       squash var(--squash) cubic-bezier(.2,.9,.3,1) calc(var(--fall)) 1 both,
-      rebound 520ms cubic-bezier(.2,.8,.25,1) calc(var(--fall) + var(--squash)) 1 both;
+      rebound var(--rebound) cubic-bezier(.2,.8,.25,1) calc(var(--fall) + var(--squash)) 1 both;
   }
 
+  /* fale (ripples) pojawiają się w miejscu “lądowania” */
   .ripples{
     position:absolute; bottom:18.5%; left:50%;
     transform:translateX(-50%);
     width: clamp(120px, 36vw, 420px); aspect-ratio:1/1;
-    pointer-events:none; filter: drop-shadow(0 0 12px rgba(255,122,0,.2));
+    pointer-events:none; filter: drop-shadow(0 0 12px rgba(255,122,0,.22));
   }
   .ripples span{
     position:absolute; inset:0; border-radius:50%;
     border:2px solid rgba(255,180,100,.25);
-    transform:scale(.4); opacity:0;
-    animation: ripple var(--ripple) ease-out var(--delay-splash) forwards;
+    transform:scale(.5); opacity:0;
+    animation: ripple var(--ripples) ease-out var(--delay-hit) forwards;
   }
-  .ripples span:nth-child(2){ animation-delay: calc(var(--delay-splash) + 120ms); }
-  .ripples span:nth-child(3){ animation-delay: calc(var(--delay-splash) + 240ms); }
+  .ripples span:nth-child(2){ animation-delay: calc(var(--delay-hit) + 120ms); }
+  .ripples span:nth-child(3){ animation-delay: calc(var(--delay-hit) + 240ms); }
 
+  /* rozprysk kropelek */
   .splash{
     position:absolute; bottom:20%; left:50%;
     width:0; height:0; pointer-events:none;
     filter: drop-shadow(0 0 10px rgba(255,140,0,.25));
   }
   .splash i{
-    position:absolute; width:8px; height:8px; border-radius:50%;
-    background: radial-gradient(circle at 30% 30%, #ffd9a1, #ff9f3a 60%, #ff7a00 100%);
+    position:absolute; width:9px; height:9px; border-radius:50%;
+    background: radial-gradient(circle at 30% 30%, #ffdba6, #ff9f3a 60%, #ff7a00 100%);
     opacity:0;
-    animation: splash var(--splash) cubic-bezier(.1,.7,.1,1) var(--delay-splash) forwards;
+    animation: splash var(--splash) cubic-bezier(.1,.7,.1,1) var(--delay-hit) forwards;
   }
+  /* kierunki i zasięgi 12 kropelek */
+  .splash i:nth-child(1){  --dx:  0.0; --dy:-1.0; --dist:130px;}
+  .splash i:nth-child(2){  --dx:  0.5; --dy:-0.9; --dist:160px;}
+  .splash i:nth-child(3){  --dx:  0.9; --dy:-0.5; --dist:140px;}
+  .splash i:nth-child(4){  --dx:  1.0; --dy: 0.0; --dist:155px;}
+  .splash i:nth-child(5){  --dx:  0.9; --dy: 0.5; --dist:135px;}
+  .splash i:nth-child(6){  --dx:  0.5; --dy: 0.9; --dist:150px;}
+  .splash i:nth-child(7){  --dx:  0.0; --dy: 1.0; --dist:120px;}
+  .splash i:nth-child(8){  --dx: -0.5; --dy: 0.9; --dist:150px;}
+  .splash i:nth-child(9){  --dx: -0.9; --dy: 0.5; --dist:135px;}
+  .splash i:nth-child(10){ --dx: -1.0; --dy: 0.0; --dist:155px;}
+  .splash i:nth-child(11){ --dx: -0.9; --dy:-0.5; --dist:140px;}
+  .splash i:nth-child(12){ --dx: -0.5; --dy:-0.9; --dist:160px;}
 
-  .splash i:nth-child(1){ --dx:  0.0;  --dy:-1.0; }
-  .splash i:nth-child(2){ --dx:  0.5;  --dy:-0.9; }
-  .splash i:nth-child(3){ --dx:  0.9;  --dy:-0.5; }
-  .splash i:nth-child(4){ --dx:  1.0;  --dy: 0.0; }
-  .splash i:nth-child(5){ --dx:  0.9;  --dy: 0.5; }
-  .splash i:nth-child(6){ --dx:  0.5;  --dy: 0.9; }
-  .splash i:nth-child(7){ --dx:  0.0;  --dy: 1.0; }
-  .splash i:nth-child(8){ --dx: -0.5;  --dy: 0.9; }
-  .splash i:nth-child(9){ --dx: -0.9;  --dy: 0.5; }
-  .splash i:nth-child(10){--dx: -1.0;  --dy: 0.0; }
-  .splash i:nth-child(11){--dx: -0.9;  --dy:-0.5; }
-  .splash i:nth-child(12){--dx: -0.5;  --dy:-0.9; }
-  .splash i{ --dist: 120px; }
-  .splash i:nth-child(odd){ --dist: 150px; }
-
+  /* animacje */
   @keyframes drop{
     0%   { transform: translateY(-60vh) scale(1) rotate(0deg); }
     85%  { transform: translateY(62vh)  scale(1) rotate(0.5deg); }
@@ -103,19 +108,20 @@
   }
   @keyframes ripple{
     0%   { transform:scale(.6); opacity:.0; border-color: rgba(255,180,100,.28); }
-    20%  { opacity:.9; }
-    100% { transform:scale(1.3); opacity:0; border-color: rgba(255,180,100,0); }
+    22%  { opacity:.95; }
+    100% { transform:scale(1.35); opacity:0; border-color: rgba(255,180,100,0); }
   }
   @keyframes splash{
-    0%   { opacity:0; transform: translate(-4px, -4px) scale(.6); }
-    8%   { opacity:1; }
+    0%   { opacity:0; transform: translate(-4px, -4px) scale(.65); }
+    10%  { opacity:1; }
     100% {
       opacity:0;
-      transform: translate(calc(var(--dx) * var(--dist)), calc(var(--dy) * var(--dist))) scale(.88);
+      transform: translate(calc(var(--dx) * var(--dist)), calc(var(--dy) * var(--dist))) scale(.9);
       filter: blur(1px);
     }
   }
 
+  /* przycisk powtórki */
   .replay{
     position:fixed; inset:auto 12px 12px auto;
     border:1px solid rgba(255,255,255,.12);
@@ -125,8 +131,9 @@
     backdrop-filter: blur(6px);
   }
 
+  /* mobile */
   @media (max-width:520px){
-    :root{ --w: 150px; }
+    :root{ --logo-w: 150px; }
   }
 </style>
 </head>
@@ -134,10 +141,16 @@
 
 <div class="stage" id="stage">
   <div class="table-shadow"></div>
+
+  <!-- kropla z mikrofonem -->
   <div class="logo" id="logo" aria-hidden="true"></div>
+
+  <!-- fale -->
   <div class="ripples" aria-hidden="true">
     <span></span><span></span><span></span>
   </div>
+
+  <!-- kropelki -->
   <div class="splash" id="splash" aria-hidden="true">
     <i></i><i></i><i></i><i></i><i></i><i></i>
     <i></i><i></i><i></i><i></i><i></i><i></i>
@@ -147,18 +160,20 @@
 <button class="replay" id="replay">▶︎ Odtwórz ponownie</button>
 
 <script>
-  const stage   = document.getElementById('stage');
-  const logo    = document.getElementById('logo');
-  const replay  = document.getElementById('replay');
+  const stage  = document.getElementById('stage');
+  const logo   = document.getElementById('logo');
+  const replay = document.getElementById('replay');
 
   function restartAnimation(){
+    // reset animacji logo
     logo.style.animation = 'none';
-    void logo.offsetWidth;
+    void logo.offsetWidth; // reflow
     logo.style.animation =
       `drop var(--fall) cubic-bezier(.22,.9,.27,1) 0ms 1 forwards,
        squash var(--squash) cubic-bezier(.2,.9,.3,1) calc(var(--fall)) 1 both,
-       rebound 520ms cubic-bezier(.2,.8,.25,1) calc(var(--fall) + var(--squash)) 1 both`;
+       rebound var(--rebound) cubic-bezier(.2,.8,.25,1) calc(var(--fall) + var(--squash)) 1 both`;
 
+    // odśwież ripples i splash, aby zaczęły od nowa
     const rip = stage.querySelector('.ripples');
     const spl = stage.querySelector('.splash');
     rip.replaceWith(rip.cloneNode(true));
@@ -166,10 +181,7 @@
   }
 
   replay.addEventListener('click', restartAnimation);
-
-  window.addEventListener('load', () => {
-    setTimeout(restartAnimation, 60);
-  });
+  window.addEventListener('load', () => setTimeout(restartAnimation, 60));
 </script>
 
 </body>
